fix: add overflow

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -20,3 +20,8 @@
   bottom: 40px;
   right: 40px;
 }
+
+.list-quote {
+  max-height: 500px;
+  overflow-y: auto;
+}
